--- a/manuscript/pareto-lakes.bib
+++ b/manuscript/pareto-lakes.bib
@@ -462,4 +462,39 @@
   number = {1}
 }
 
+@article{piMappingGlobalLake2022,
+  title = {Mapping Global Lake Dynamics Reveals the Emerging Roles of Small Lakes},
+  author = {Pi, Xuehui and Luo, Qiuqi and Feng, Lian and Xu, Yang and Tang, Jing and Liang, Xiuyu and Ma, Enze and Cheng, Ran and Fensholt, Rasmus and Brandt, Martin and Cai, Xiaobin and Gibson, Luke and Liu, Junguo and Zheng, Chunmiao and Li, Weifeng and Bryan, Brett A.},
+  year = {2022},
+  month = oct,
+  journal = {Nature Communications},
+  volume = {13},
+  number = {1},
+  pages = {5777},
+  issn = {2041-1723},
+  doi = {10.1038/s41467-022-33239-3},
+  langid = {english},
+  file = {C\:\\Users\\358572\\Zotero\\storage\\GD6GVWNB\\Pi et al. - 2022 - Mapping global lake dynamics reveals the emerging .pdf}
+}
 
+@article{seekell2011does,
+  title={Does the Pareto distribution adequately describe the size-distribution of lakes?},
+  author={Seekell, David A and Pace, Michael L},
+  journal={Limnology and Oceanography},
+  volume={56},
+  number={1},
+  pages={350--356},
+  year={2011},
+  publisher={Wiley Online Library}
+}
+
+@article{slater2006srtm,
+  title={The SRTM data “finishing” process and products},
+  author={Slater, James A and Garvey, Graham and Johnston, Carolyn and Haase, Jeffrey and Heady, Barry and Kroenung, George and Little, James},
+  journal={Photogrammetric Engineering \& Remote Sensing},
+  volume={72},
+  number={3},
+  pages={237--247},
+  year={2006},
+  publisher={American Society for Photogrammetry and Remote Sensing}
+}
